--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,10 @@ services:
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-      MYSQL_DATABASE: database
+      MYSQL_ROOT_PASSWORD: ${WDN_MYSQL_PASSWORD:?}
+      MYSQL_USER: ${WDN_MYSQL_USER:?}
+      MYSQL_PASSWORD: ${WDN_MYSQL_PASSWORD:?}
+      MYSQL_DATABASE: ${WDN_MYSQL_NAME:?}
     volumes:
       - ./tables/table_structures.sql:/docker-entrypoint-initdb.d/schema.sql
       - ~/wnpp-debian-net/var-lib-mysql:/var/lib/mysql
