--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,9 @@ FROM python:3.9-alpine
 RUN apk add --update \
         bash \
         diffutils \
+        gcc \
+        mariadb-connector-c-dev \
+        musl-dev \
         shadow
 
 RUN useradd --create-home --uid 1001 --non-unique wnpp-debian-net
