--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.1.6
 gunicorn==20.0.4
 gunicorn-color==0.1.0
 mysqlclient==2.0.3
+PySimpleSOAP==1.16.2
 
 # Indirect dependencies
 asgiref==3.3.1
