--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,14 @@ gunicorn==20.0.4
 gunicorn-color==0.1.0
 mysqlclient==2.0.3
 PySimpleSOAP==1.16.2
+requests==2.25.1
 
 # Indirect dependencies
 asgiref==3.3.1
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
 pytz==2021.1
 sqlparse==0.4.1
 termcolor==1.1.0
+urllib3==1.26.3
