settings: Default DEBUG to False

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       dockerfile: docker/Dockerfile
     environment:
       WDN_ALLOWED_HOSTS: ${WDN_ALLOWED_HOSTS}
+      WDN_DEBUG: ${WDN_DEBUG}
       WDN_MYSQL_HOST: mysql
       WDN_MYSQL_NAME: ${WDN_MYSQL_NAME:?}
       WDN_MYSQL_PASSWORD: ${WDN_MYSQL_PASSWORD:?}
