django: Integrate Sentry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       WDN_MYSQL_PORT: ${WDN_MYSQL_PORT:?}
       WDN_MYSQL_USER: ${WDN_MYSQL_USER:?}
       WDN_SECRET_KEY: ${WDN_SECRET_KEY:?}
+      WDN_SENTRY_DSN: ${WDN_SENTRY_DSN}
     ports:
       - 127.0.0.1:52080:52080
     networks:
