--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ mysqlclient==2.0.3
 parameterized==0.8.1
 PySimpleSOAP==1.16.2
 requests==2.25.1
+sentry-sdk==0.20.1
 wait-for-it==2.2.0
 
 # Indirect dependencies
