--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile
     environment:
+      # KEEP IN SYNC with container "cron" below
       WDN_ALLOWED_HOSTS: ${WDN_ALLOWED_HOSTS}
       WDN_DEBUG: ${WDN_DEBUG}
       WDN_MYSQL_HOST: mysql
@@ -37,11 +38,37 @@ services:
       WDN_MYSQL_USER: ${WDN_MYSQL_USER:?}
       WDN_SECRET_KEY: ${WDN_SECRET_KEY:?}
       WDN_SENTRY_DSN: ${WDN_SENTRY_DSN}
+      # KEEP IN SYNC with container "cron" below
     ports:
       - 127.0.0.1:52080:52080
     networks:
       - default
       - ssl-reverse-proxy
+    user: 1001:1001
+    cap_drop:
+      - ALL
+    restart: unless-stopped
+    tty: true
+
+  cron:
+    depends_on:
+      - mysql
+    image: ${COMPOSE_PROJECT_NAME:-wnppdebiannet}_django
+    command: ["sh", "-c", "supercronic -sentry-dsn \"${WDN_SENTRY_DSN}\" ~/crontab"]
+    environment:
+      # KEEP IN SYNC with container "django" above
+      WDN_ALLOWED_HOSTS: ${WDN_ALLOWED_HOSTS}
+      WDN_DEBUG: ${WDN_DEBUG}
+      WDN_MYSQL_HOST: mysql
+      WDN_MYSQL_NAME: ${WDN_MYSQL_NAME:?}
+      WDN_MYSQL_PASSWORD: ${WDN_MYSQL_PASSWORD:?}
+      WDN_MYSQL_PORT: ${WDN_MYSQL_PORT:?}
+      WDN_MYSQL_USER: ${WDN_MYSQL_USER:?}
+      WDN_SECRET_KEY: ${WDN_SECRET_KEY:?}
+      WDN_SENTRY_DSN: ${WDN_SENTRY_DSN}
+      # KEEP IN SYNC with container "django" above
+    networks:
+      - default
     user: 1001:1001
     cap_drop:
       - ALL
