--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 Django==3.1.6
 gunicorn==20.0.4
 gunicorn-color==0.1.0
+ipython==7.20.0
 mysqlclient==2.0.3
 parameterized==0.8.1
 PySimpleSOAP==1.16.2
@@ -11,11 +12,23 @@ wait-for-it==2.2.0
 
 # Indirect dependencies
 asgiref==3.3.1
+backcall==0.2.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+decorator==4.4.2
 idna==2.10
+ipython-genutils==0.2.0
+jedi==0.18.0
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.16
+ptyprocess==0.7.0
+Pygments==2.8.0
 pytz==2021.1
 sqlparse==0.4.1
 termcolor==1.1.0
+traitlets==5.0.5
 urllib3==1.26.3
+wcwidth==0.2.5
