--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 coverage==5.4
 django-coverage-plugin==1.8.0
 Django==3.1.6
+factory-boy==3.2.0
 gunicorn==20.0.4
 gunicorn-color==0.1.0
 ipython==7.20.0
@@ -19,6 +20,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 decorator==4.4.2
+Faker==6.1.1
 idna==2.10
 ipython-genutils==0.2.0
 jedi==0.18.0
@@ -28,10 +30,12 @@ pickleshare==0.7.5
 prompt-toolkit==3.0.16
 ptyprocess==0.7.0
 Pygments==2.8.0
+python-dateutil==2.8.1
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
 termcolor==1.1.0
+text-unidecode==1.3
 traitlets==5.0.5
 urllib3==1.26.3
 wcwidth==0.2.5
