--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ factory-boy==3.2.0
 gunicorn==20.0.4
 gunicorn-color==0.1.0
 ipython==7.20.0
-mysqlclient==2.0.3
 parameterized==0.8.1
+psycopg2==2.8.6
 PySimpleSOAP==1.16.2
 requests==2.25.1
 sentry-sdk==0.20.1
