--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ psycopg2==2.8.6
 PySimpleSOAP==1.16.2
 requests==2.25.1
 sentry-sdk==0.20.2
+vcrpy-unittest==0.1.7
 wait-for-it==2.2.0
 
 # Indirect dependencies
@@ -24,6 +25,7 @@ Faker==6.1.1
 idna==2.10
 ipython-genutils==0.2.0
 jedi==0.18.0
+multidict==5.1.0
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -32,10 +34,14 @@ ptyprocess==0.7.0
 Pygments==2.8.0
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 six==1.15.0
 sqlparse==0.4.1
 termcolor==1.1.0
 text-unidecode==1.3
 traitlets==5.0.5
 urllib3==1.26.3
+vcrpy==4.1.1
 wcwidth==0.2.5
+wrapt==1.12.1
+yarl==1.6.3
