--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Direct dependencies
 coverage==5.4
 django-coverage-plugin==1.8.0
+django-extensions==3.1.1
 Django==3.1.6
 factory-boy==3.2.0
 gunicorn==20.0.4
