importpopcon.py: Cover

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
       - id: check-merge-conflict
       - id: end-of-file-fixer
       - id: trailing-whitespace
+        exclude: '/popcon_test_data/'
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.4
