--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ parameterized==0.8.1
 psycopg2==2.8.6
 PySimpleSOAP==1.16.2
 requests==2.25.1
+responses==0.12.1
 sentry-sdk==0.20.2
 vcrpy-unittest==0.1.7
 wait-for-it==2.2.0
