--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ factory-boy==3.2.0
 gunicorn==20.0.4
 gunicorn-color==0.1.0
 ipython==7.20.0
+nplusone==1.0.0
 parameterized==0.8.1
 psycopg2==2.8.6
 PySimpleSOAP==1.16.2
@@ -19,6 +20,7 @@ wait-for-it==2.2.0
 # Indirect dependencies
 asgiref==3.3.1
 backcall==0.2.0
+blinker==1.4
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
