--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Direct dependencies
+beautifulsoup4==4.9.3
 coverage==5.4
 django-coverage-plugin==1.8.0
 django-extensions==3.1.1
@@ -40,6 +41,7 @@ python-dateutil==2.8.1
 pytz==2021.1
 PyYAML==5.4.1
 six==1.15.0
+soupsieve==2.2
 sqlparse==0.4.1
 termcolor==1.1.0
 text-unidecode==1.3
