--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,6 +16,7 @@ RUN echo '@edge-community https://dl-cdn.alpinelinux.org/alpine/edge/community' 
         shadow \
         supercronic@edge-community
 
+SHELL ["/bin/bash", "-c"]
 RUN useradd --create-home --uid 1001 --non-unique wnpp-debian-net
 USER wnpp-debian-net
 ENV PATH=/home/wnpp-debian-net/.local/bin/:${PATH}
@@ -30,7 +31,7 @@ RUN pip3 install --user --ignore-installed --disable-pip-version-check pip setup
         && \
     pip3 check \
         && \
-    bash -c "diff -u0 <(pip freeze | sort -f) <(sed -e '/^#/d' -e '/^$/d' requirements.txt | sort -f)"
+    diff -u0 <(pip freeze | sort -f) <(sed -e '/^#/d' -e '/^$/d' requirements.txt | sort -f)
 
 COPY docker/entrypoint.sh ./
 ENTRYPOINT ["./entrypoint.sh"]
