Actions: Drop CI permissions for security (where not already dropping)

--- a/.github/workflows/build_and_test_using_docker.yml
+++ b/.github/workflows/build_and_test_using_docker.yml
@@ -3,6 +3,10 @@
 
 name: Build and test using Docker
 
+# Drop permissions to minimum, for security
+permissions:
+  contents: read
+
 on:
   pull_request:
   push:
