--- a/.github/workflows/pre_commit_run.yml
+++ b/.github/workflows/pre_commit_run.yml
@@ -3,6 +3,10 @@
 
 name: Run pre-commit on all files
 
+# Drop permissions to minimum, for security
+permissions:
+  contents: read
+
 on:
   pull_request:
   push:
