requirements: Fix "factory-boy" to match "pip3 freeze" output

--- a/requirements-direct.txt
+++ b/requirements-direct.txt
@@ -83,7 +83,7 @@ django-extensions==3.2.3 \
 Django==5.1 \
     --hash=sha256:848a5980e8efb76eea70872fb0e4bc5e371619c70fffbe48e3e1b50b2c09455d \
     --hash=sha256:d3b811bf5371a26def053d7ee42a9df1267ef7622323fe70a601936725aa4557
-factory-boy==3.3.1 \
+factory_boy==3.3.1 \
     --hash=sha256:7b1113c49736e1e9995bc2a18f4dbf2c52cf0f841103517010b1d825712ce3ca \
     --hash=sha256:8317aa5289cdfc45f9cae570feb07a6177316c82e34d14df3c2e1f22f26abef0
 gunicorn==23.0.0 \
