--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -33,7 +33,15 @@ RUN pip3 install --user --ignore-installed --disable-pip-version-check pip setup
         && \
     diff -u0 \
             <(sed -e '/--hash=/d' -e 's/ \\$//' -e '/^#/d' -e '/^$/d' requirements-*.txt | sort -f) \
-            <(pip3 freeze | sed -e '/^setuptools==/d' -e '/^wheel==/d' | sort -f)
+            <(pip3 freeze | sed -e '/^setuptools==/d' -e '/^wheel==/d' | sort -f) \
+        && \
+    diff -u1 \
+            <(grep == requirements-direct.txt | sed 's,==.*,,') \
+            <(grep == requirements-direct.txt | sed 's,==.*,,' | sort -f) \
+        && \
+    diff -u1 \
+            <(grep == requirements-indirect.txt | sed 's,==.*,,') \
+            <(grep == requirements-indirect.txt | sed 's,==.*,,' | sort -f)
 
 COPY docker/entrypoint.sh ./
 ENTRYPOINT ["./entrypoint.sh"]
