--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,11 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
         exclude: '/popcon_test_data/'
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.7.0
+    hooks:
+      - id: ruff
+        args:
+          - --fix
+      - id: ruff-format
